--- a/exercicio3/sugestao.html
+++ b/exercicio3/sugestao.html
@@ -10,17 +10,28 @@
 </head>
 
 <body>
-    <div class="a">
-        <h1><a href="./index.html">Simulador de Climas</a></h1>
-    </div>
-    <div class="b">
-        <div class="c">
+    <header>
+        <h1><a href="http://127.0.0.1:5500/exercicio2/index.html">Simulador de Climas</a></h1>
+    </header>
+    <main>
+        <form action="#">
+            <label for="nome">nome</label>
+            <input type="text" name="nome" id="nome">
+            <br><br>
+            <label for="email">email</label>
+            <input type="email" name="email" id="email">
+            <br><br>
+            <label for="clima">sugestão de clima</label>
+            <br>
+            <textarea name="clima" id="clima" cols="30" rows="10" placeholder="insira aqui sua sugestão"></textarea>
+            <br><br>
+            <button type="submit">enviar</button>
 
-<!-- Seu formukário aqui!-->
-        </div>
 
-    </div>
-    <div class="e">Footer</div>
+        </form>
+
+    </main>
+    <Footer>Footer</Footer>
 
 </body>
 
